@@ -59,8 +59,8 @@ server:
 	# msg-buffer-size: 65552
 
 	# the amount of memory to use for the message cache.
-	# in bytes. default is 4 Mb
-	# msg-cache-size: 4194304
+	# plain value in bytes or you can append k, m or G. default is "4Mb". 
+	# msg-cache-size: 4m
 
 	# the number of slabs to use for the message cache.
 	# the number of slabs must be a power of 2.
@@ -71,8 +71,8 @@ server:
 	# num-queries-per-thread: 1024
 
 	# the amount of memory to use for the RRset cache.
-	# in bytes. default is 4 Mb
-	# rrset-cache-size: 4194304
+	# plain value in bytes or you can append k, m or G. default is "4Mb". 
+	# rrset-cache-size: 4m
 
 	# the number of slabs to use for the RRset cache.
 	# the number of slabs must be a power of 2.
@@ -99,7 +99,7 @@ server:
 	# infra-cache-numhosts: 10000
 
 	# the maximum size of the lame zones cached per host. in bytes.
-	# infra-cache-lame-size: 10240
+	# infra-cache-lame-size: 10k
 
 	# Enable IPv4, "yes" or "no".
 	# do-ip4: yes
@@ -247,8 +247,8 @@ server:
 	# val-nsec3-keysize-iterations: "1024 150 2048 500 4096 2500"
 
 	# the amount of memory to use for the key cache.
-	# in bytes. default is 4 Mb
-	# key-cache-size: 4194304
+	# plain value in bytes or you can append k, m or G. default is "4Mb". 
+	# key-cache-size: 4m
 
 	# the number of slabs to use for the key cache.
 	# the number of slabs must be a power of 2.
